Fix restaurant view horizontal scrollbar issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -354,16 +354,22 @@ nav h1 a {
 		padding: 0;
 	}
   .inside #reviews-container {
-    width: 85%;
+    width: 100%;
     margin: auto;
   }
 	#reviews-list {
     width: 100%;
-		margin: auto;
+		margin: 0;
   }
+	#reviews-container {
+		padding: 30px 0 80px;
+	}
 	#reviews-container h2 {
     text-align: center;
   }
+	#reviews-list li {
+	  width: 98%;
+	}
   .inside #footer {
     order: 4;
     width: 100%;
